Fix donate button spacing

--- a/_sass/components/_mailchimp.scss
+++ b/_sass/components/_mailchimp.scss
@@ -7,7 +7,7 @@
   position: relative;
   input {
     border-radius: 0;
-    padding: 25px;
+    padding: 25px 12px;
     margin-top: 30px;
   }
 }
